2010-11-16  Dirk Eddelbuettel  <edd@debian.org>

	* man/*.Rd: Added Author note for RcppDE.

2010-11-06  Dirk Eddelbuettel  <edd@debian.org>

	* src/evaluate.h: Converted from evaluate.cpp, now contains abstract
	base class for evaluation as well as two implementations for the old
	standard (using a function and environment from R) as well as new one
	using external pointers passing a function pointer to a function with
	signature double (*fun)(SEXP); also counts nb of calls inside class
	* src/devol.cpp: Adapted to use the new framework

	* demo/CompiledBenchmark: New benchmark demo showcasing new approach
	* compBenchmark: New frontend script

2010-11-04  Dirk Eddelbuettel  <edd@debian.org>

	* src/deoptim.cpp: Pass fn and rho through to devol()

	* R/DEoptim.R: Make 'env' an optional argument, don't redefine fn()
	* man/DEoptim.Rd: Document 'env' argument

2010-10-31  Dirk Eddelbuettel  <edd@debian.org>

	* src/Makevars: add new define for compilation with OpenMP

	* src/devolMP.cpp: New OpenMP-using variants -- with issues as we
	cannot simple multithread around the single-threaded R instance
	* src/permuteMP.cpp: New OpenMP-using variant -- without actual
	speedup as the task in the permutation loop is so simple that the
	multithreading overhead eats any parallelisation gains

	* src/devol.cpp: Added #ifdef to disable if OpenMP is used
	* src/permute.cpp: Added #ifdef to disable if OpenMP is used

	* openmp.r: Added test script for OpenMP usage

2010-10-30  Dirk Eddelbuettel  <edd@debian.org>

	* src/deoptim.cpp: Renamed from de4_0.cpp; function renamed DEoptim
	* R/DEoptim.R: Call renamed function "DEoptim"

	* src/devol.cpp: Split function devol() off into its own file
	* src/permute.cpp: Split function devol() off into its own file

	* profile.r: Simple front-end script used for profiling runs

	* src/evaluate.cpp: Slight performance increase and simplification

	* benchmark.txt: Updated benchmark results, including one on OS X
